--- a/qny-vue/package.json
+++ b/qny-vue/package.json
@@ -13,13 +13,19 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "element-plus": "^2.11.3",
     "pinia": "^3.0.3",
+    "scss": "^0.2.4",
+    "unplugin-vue-components": "^29.1.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "prettier": "3.6.2",
+    "sass-embedded": "^1.93.0",
+    "unplugin-auto-import": "^20.1.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
   }
