--- a/qny-python/requirements.txt
+++ b/qny-python/requirements.txt
@@ -1,2 +1,11 @@
 fastapi
 uvicorn
+python-multipart
+python-jose[cryptography]
+passlib[bcrypt]
+python-dotenv
+SQLAlchemy>=1.4
+pydantic
+PyMySQL
+pydantic[email]
+
