保存本地修改

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 "CLAUDE.md" 
-"¹¤×÷¼ÇÂ¼.md" 
-"¿ª·¢ÎÄµµ.md" 
+"ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Â¼.md" 
+"ï¿½ï¿½ï¿½ï¿½ï¿½Äµï¿½.md" 
 ".vscode/" 
 "__pycache__/" 
 "*.pyc" 
 ".env" 
 ".env.*" 
+.venv/
+__pycache__/
+*.pyc
