--- a/qny-python/.env
+++ b/qny-python/.env
@@ -7,7 +7,7 @@ CORS_ALLOW_ORIGINS=*
 DATABASE_URL=mysql+pymysql://ai_user:XrNaHBdEGjbzLjSj@localhost:3306/ai_user?charset=utf8mb4
 REDIS_URL=redis://localhost:6379/0
 
-DASHSCOPE_API_KEY=sk-8509435cecb3495f8b18a5fbffa384c2
+DASHSCOPE_API_KEY=
 LLM_PROVIDER=dashscope
 LLM_MODEL=qwen-plus
 LLM_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
