对话功能测试完毕，新增阿里云对象存储，对话接口更新

--- a/qny-python/.env
+++ b/qny-python/.env
@@ -7,9 +7,15 @@ CORS_ALLOW_ORIGINS=*
 DATABASE_URL=mysql+pymysql://ai_user:XrNaHBdEGjbzLjSj@localhost:3306/ai_user?charset=utf8mb4
 REDIS_URL=redis://localhost:6379/0
 
-DASHSCOPE_API_KEY=
+DASHSCOPE_API_KEY=sk-8509435cecb3495f8b18a5fbffa384c2
 LLM_PROVIDER=dashscope
 LLM_MODEL=qwen-plus
 LLM_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 LLM_TIMEOUT_SEC=30
 LLM_MAX_RETRIES=3
+//阿里云对象服务
+OSS_ACCESS_KEY_ID=你的AccessKeyId
+OSS_ACCESS_KEY_SECRET=你的AccessKeySecret
+OSS_ENDPOINT=oss-cn-hangzhou.aliyuncs.com
+OSS_BUCKET_NAME=your-bucket-name
+OSS_BASE_URL=https://your-bucket-name.oss-cn-hangzhou.aliyuncs.com
