--- a/qny-python/.env
+++ b/qny-python/.env
@@ -7,20 +7,20 @@ CORS_ALLOW_ORIGINS=*
 DATABASE_URL=mysql+pymysql://ai_user:XrNaHBdEGjbzLjSj@localhost:3306/ai_user?charset=utf8mb4
 REDIS_URL=redis://localhost:6379/0
 
-DASHSCOPE_API_KEY=
+DASHSCOPE_API_KEY=sk-8509435cecb3495f8b18a5fbffa384c2
 LLM_PROVIDER=dashscope
 LLM_MODEL=qwen-plus
 LLM_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 LLM_TIMEOUT_SEC=30
 LLM_MAX_RETRIES=3
 # 阿里云对象服务
-OSS_ACCESS_KEY_ID=
-OSS_ACCESS_KEY_SECRET=
+OSS_ACCESS_KEY_ID=LTAl5tKrn54fVc5jEj63nDH5
+OSS_ACCESS_KEY_SECRET=ePBAlt0LITOgzt6rXKhV6bKCTYSsGg
 OSS_ENDPOINT=oss-cn-hangzhou.aliyuncs.com
-OSS_BUCKET_NAME=
+OSS_BUCKET_NAME=object-bucket
 OSS_BASE_URL=https://your-bucket-name.oss-cn-hangzhou.aliyuncs.com
 
 # 百度语音服务
-BAIDU_APP_ID=
-BAIDU_API_KEY=
-BAIDU_SECRET_KEY=
+BAIDU_APP_ID=7094117
+BAIDU_API_KEY=5tdoraXYYvbL8WGZfPi5xQGD
+BAIDU_SECRET_KEY=lxkOAnAFut9qwF4c5L8T8exzMiREVXjv
