前后端代码更新

--- a/qny-python/.env
+++ b/qny-python/.env
@@ -13,6 +13,7 @@ LLM_MODEL=qwen-plus
 LLM_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 LLM_TIMEOUT_SEC=30
 LLM_MAX_RETRIES=3
+USE_RAG=true
 # 阿里云对象服务
 OSS_ACCESS_KEY_ID=LTAl5tKrn54fVc5jEj63nDH5
 OSS_ACCESS_KEY_SECRET=ePBAlt0LITOgzt6rXKhV6bKCTYSsGg
